[CYCLES] Sun light not lighting evenly at high angle values in Cycles #108957

Closed
opened 2023-06-14 04:30:32 +02:00 by homspau · 2 comments

System Information
Operating system: Linux-5.15.0-73-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.182.03

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)

Short description of error
Hi there!

When increasing the angle value of a sun light to values close to 180 degrees in Cycles, the rays closer to the lights direction lose strength while the ones that diverge the most gain power. When the values is 180, the light output is pure black.This results in unexpected behaviour:

-When having a zenital sun light set to an angle close to 180 you would expect a result similar to having the upper half of the "world" be white. Instead you get this:

image
This is not how a massive sun would appear. It happens both in CPU and GPU.

Also, this results in an inconsistency since in EEVEE the result is predictable:
image

Thanks in advance for looking into it!

Exact steps for others to reproduce the error
FROM THE ATTACHED BLEND FILE

  1. In render view, see what happens when you increase the angle to a value closer to 180 degrees.
  2. Compare to EEVEE and evaluate the result.

FROM THE STARTUP FILE

  1. Create a sphere and give it a chrome material
  2. Create a sun light and set the world to 0
  3. Switch to Cycles
  4. In render view, see what happens when you increase the angle to a value closer to 180 degrees.
  5. Compare to EEVEE and evaluate the result.
**System Information** Operating system: Linux-5.15.0-73-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.182.03 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: (newest version of Blender that worked as expected) **Short description of error** Hi there! When increasing the angle value of a sun light to values close to 180 degrees in Cycles, the rays closer to the lights direction lose strength while the ones that diverge the most gain power. When the values is 180, the light output is pure black.This results in unexpected behaviour: -When having a zenital sun light set to an angle close to 180 you would expect a result similar to having the upper half of the "world" be white. Instead you get this: ![image](/attachments/9bd2cfbc-62af-4557-923b-366c9b9f1be4) This is not how a massive sun would appear. It happens both in CPU and GPU. Also, this results in an inconsistency since in EEVEE the result is predictable: ![image](/attachments/1935e690-e011-4708-80dc-5f40c09b675a) Thanks in advance for looking into it! **Exact steps for others to reproduce the error** FROM THE ATTACHED BLEND FILE 1. In render view, see what happens when you increase the angle to a value closer to 180 degrees. 2. Compare to EEVEE and evaluate the result. FROM THE STARTUP FILE 1. Create a sphere and give it a chrome material 2. Create a sun light and set the world to 0 3. Switch to Cycles 4. In render view, see what happens when you increase the angle to a value closer to 180 degrees. 5. Compare to EEVEE and evaluate the result.
homspau added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-14 04:30:32 +02:00
Member

Can confirm that cycles does this "ring light" effect when the angle is closer to 180 deg.

happens with at least 3.3, it's probably a older bug.

Can confirm that cycles does this "ring light" effect when the angle is closer to 180 deg. happens with at least 3.3, it's probably a older bug.
YimingWu added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-14 08:32:30 +02:00
Member

From what I can tell, the issue here is that Cycles models sun lamps as an infinitely distant disk with whatever radius is needed to cover the specified angle, not as an infinitely distant sphere cap. If I remember correctly, it's always been like this, so this isn't a regression.

But yeah, it probably should behave differently. I'll check whether changing it to have constant radiance has a noticeable impact on render times and/or results in existing scenes with "normal" angles.

From what I can tell, the issue here is that Cycles models sun lamps as an infinitely distant disk with whatever radius is needed to cover the specified angle, not as an infinitely distant sphere cap. If I remember correctly, it's always been like this, so this isn't a regression. But yeah, it probably should behave differently. I'll check whether changing it to have constant radiance has a noticeable impact on render times and/or results in existing scenes with "normal" angles.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-07-08 09:48:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108957
No description provided.