intern/cycles/kernel/light/distant.h
@@ -14,24 +14,15 @@ ccl_device_inline bool distant_light_sample(const ccl_global KernelLight *klight
                                             const float2 rand,
                                             ccl_private LightSample *ls)
 {
-  /* distant light */
-  float3 lightD = klight->co;
-  float3 D = lightD;
-  float radius = klight->distant.radius;
-  float invarea = klight->distant.invarea;
+  float unused;
+  sample_uniform_cone_concentric(
+      klight->co, klight->distant.one_minus_cosangle, rand, &unused, &ls->Ng, &ls->pdf);
 
-  if (radius > 0.0f) {
-    D = normalize(D + disk_light_sample(D, rand) * radius);
-  }
-
-  ls->P = D;
-  ls->Ng = D;
-  ls->D = -D;
+  ls->P = ls->Ng;
+  ls->D = -ls->Ng;
   ls->t = FLT_MAX;
 
-  float costheta = dot(lightD, D);
-  ls->pdf = invarea / (costheta * costheta * costheta);
-  ls->eval_fac = ls->pdf;
+  ls->eval_fac = klight->distant.eval_fac;
 
   return true;
 }
@@ -50,15 +41,11 @@ ccl_device bool distant_light_intersect(const ccl_global KernelLight *klight,
 {
   kernel_assert(klight->type == LIGHT_DISTANT);
 
-  if (klight->distant.radius == 0.0f) {
+  if (klight->distant.angle == 0.0f) {
     return false;
   }
 
-  const float3 lightD = klight->co;
-  const float costheta = dot(-lightD, ray->D);
-  const float cosangle = klight->distant.cosangle;
-
-  if (costheta < cosangle) {
+  if (vector_angle(-klight->co, ray->D) > klight->distant.angle) {
     return false;
   }
 
@@ -76,7 +63,6 @@ ccl_device bool distant_light_sample_from_intersection(KernelGlobals kg,
 {
   ccl_global const KernelLight *klight = &kernel_data_fetch(lights, lamp);
   const int shader = klight->shader_id;
-  const float radius = klight->distant.radius;
   const LightType type = (LightType)klight->type;
 
   if (type != LIGHT_DISTANT) {
@@ -85,28 +71,9 @@ ccl_device bool distant_light_sample_from_intersection(KernelGlobals kg,
   if (!(shader & SHADER_USE_MIS)) {
     return false;
   }
-  if (radius == 0.0f) {
+  if (klight->distant.angle == 0.0f) {
     return false;
   }
-
-  /* a distant light is infinitely far away, but equivalent to a disk
-   * shaped light exactly 1 unit away from the current shading point.
-   *
-   *     radius              t^2/cos(theta)
-   *  <---------->           t = sqrt(1^2 + tan(theta)^2)
-   *       tan(th)           area = radius*radius*pi
-   *       <----->
-   *        \    |           (1 + tan(theta)^2)/cos(theta)
-   *         \   |           (1 + tan(acos(cos(theta)))^2)/cos(theta)
-   *       t  \th| 1         simplifies to
-   *           \-|           1/(cos(theta)^3)
-   *            \|           magic!
-   *             P
-   */
-
-  float3 lightD = klight->co;
-  float costheta = dot(-lightD, ray_D);
-  float cosangle = klight->distant.cosangle;
 
   /* Workaround to prevent a hang in the classroom scene with AMD HIP drivers 22.10,
    * Remove when a compiler fix is available. */
@@ -114,8 +81,9 @@ ccl_device bool distant_light_sample_from_intersection(KernelGlobals kg,
   ls->shader = klight->shader_id;
 #endif
 
-  if (costheta < cosangle)
+  if (vector_angle(-klight->co, ray_D) > klight->distant.angle) {
     return false;
+  }
 
   ls->type = type;
 #ifndef __HIP__
@@ -133,10 +101,8 @@ ccl_device bool distant_light_sample_from_intersection(KernelGlobals kg,
   ls->D = ray_D;
   ls->group = lamp_lightgroup(kg, lamp);
 
-  /* compute pdf */
-  float invarea = klight->distant.invarea;
-  ls->pdf = invarea / (costheta * costheta * costheta);
-  ls->eval_fac = ls->pdf;
+  ls->pdf = klight->distant.pdf;
+  ls->eval_fac = klight->distant.eval_fac;
 
   return true;
 }
